test/corpus/literals.txt
================================================================================
Decimal literal
================================================================================

234

--------------------------------------------------------------------------------

(source_file
  (build_definition
    (statement
      (expression
        (literal
          (integer_literal
            (decimal_literal)))))))

================================================================================
Hexadecimal literal
================================================================================

0xfacef33d

--------------------------------------------------------------------------------

(source_file
  (build_definition
    (statement
      (expression
        (literal
          (integer_literal
            (hex_literal)))))))

================================================================================
Boolean literal (true)
================================================================================

true

--------------------------------------------------------------------------------

(source_file
  (build_definition
    (statement
      (expression
        (literal
          (boolean_literal))))))

================================================================================
Boolean literal (false)
================================================================================

false

--------------------------------------------------------------------------------

(source_file
  (build_definition
    (statement
      (expression
        (literal
          (boolean_literal))))))

================================================================================
Array literal
================================================================================

[1, 'a', true, [2, 3, 4]]

--------------------------------------------------------------------------------

(source_file
  (build_definition
    (statement
      (expression
        (literal
          (array_literal
            (expression
              (literal
                (integer_literal
                  (decimal_literal))))
            (expression
              (literal
                (string_literal
                  (string_simple))))
            (expression
              (literal
                (boolean_literal)))
            (expression
              (literal
                (array_literal
                  (expression
                    (literal
                      (integer_literal
                        (decimal_literal))))
                  (expression
                    (literal
                      (integer_literal
                        (decimal_literal))))
                  (expression
                    (literal
                      (integer_literal
                        (decimal_literal)))))))))))))

================================================================================
Dictionary literal (empty)
================================================================================

{}

--------------------------------------------------------------------------------

(source_file
  (build_definition
    (statement
      (expression
        (literal
          (dictionary_literal))))))

================================================================================
Dictionary literal (one key)
================================================================================

{ 'foo': 'bar' }

--------------------------------------------------------------------------------

(source_file
  (build_definition
    (statement
      (expression
        (literal
          (dictionary_literal
            (key_value_item
              (expression
                (literal
                  (string_literal
                    (string_simple))))
              (expression
                (literal
                  (string_literal
                    (string_simple)))))))))))

================================================================================
Dictionary literal (two keys)
================================================================================

{ 'foo': 'bar', 'baz': 234 }

--------------------------------------------------------------------------------

(source_file
  (build_definition
    (statement
      (expression
        (literal
          (dictionary_literal
            (key_value_item
              (expression
                (literal
                  (string_literal
                    (string_simple))))
              (expression
                (literal
                  (string_literal
                    (string_simple)))))
            (key_value_item
              (expression
                (literal
                  (string_literal
                    (string_simple))))
              (expression
                (literal
                  (integer_literal
                    (decimal_literal)))))))))))

================================================================================
Dictionary literal (array value)
================================================================================

{ 'options': ['yay', 0xf00d, false] }

--------------------------------------------------------------------------------

(source_file
  (build_definition
    (statement
      (expression
        (literal
          (dictionary_literal
            (key_value_item
              (expression
                (literal
                  (string_literal
                    (string_simple))))
              (expression
                (literal
                  (array_literal
                    (expression
                      (literal
                        (string_literal
                          (string_simple))))
                    (expression
                      (literal
                        (integer_literal
                          (hex_literal))))
                    (expression
                      (literal
                        (boolean_literal)))))))))))))

================================================================================
Dictionary literal (nested)
================================================================================

{ 'ab': { 'a': 'b' }, 'cd': { 'c': 'd' } }

--------------------------------------------------------------------------------

(source_file
  (build_definition
    (statement
      (expression
        (literal
          (dictionary_literal
            (key_value_item
              (expression
                (literal
                  (string_literal
                    (string_simple))))
              (expression
                (literal
                  (dictionary_literal
                    (key_value_item
                      (expression
                        (literal
                          (string_literal
                            (string_simple))))
                      (expression
                        (literal
                          (string_literal
                            (string_simple)))))))))
            (key_value_item
              (expression
                (literal
                  (string_literal
                    (string_simple))))
              (expression
                (literal
                  (dictionary_literal
                    (key_value_item
                      (expression
                        (literal
                          (string_literal
                            (string_simple))))
                      (expression
                        (literal
                          (string_literal
                            (string_simple)))))))))))))))
